--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="error_empty_username">Please fill this field too</string>
     <string name="error_empty_password">Please fill this field too</string>
     <string name="error_could_not_connect">Could not connect to the library</string>
+    <string name="common_error_description">Something went wrong</string>
 </resources>
